Versao Final UiPath Teste

--- a/Email.xaml
+++ b/Email.xaml
@@ -65,7 +65,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <umab:GmailApplicationCard ConnectionAccountName="{x:Null}" ConnectionId="{x:Null}" Account="giovannadsmessias@outlook.com" DisplayName="Use Gmail" EmailAddress="giovannadsmessias@outlook.com" sap:VirtualizedContainerService.HintSize="510,670" sap2010:WorkflowViewState.IdRef="GmailApplicationCard_1" Timeout="90" UseConnectionService="False">
+    <umab:GmailApplicationCard ConnectionAccountName="{x:Null}" ConnectionId="{x:Null}" Account="temporary.giovanna@gmail.com" DisplayName="Use Gmail" EmailAddress="temporary.giovanna@gmail.com" sap:VirtualizedContainerService.HintSize="510,670" sap2010:WorkflowViewState.IdRef="GmailApplicationCard_1" Timeout="90" UseConnectionService="False">
       <umab:GmailApplicationCard.Body>
         <ActivityAction x:TypeArguments="um:IMailQuickHandle">
           <ActivityAction.Argument>
